Add working Dockerfile